[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fix8"
version = "0.3.0"
description = "Fix8 (Fixate) is an Open-Source GUI Tool for Working with Eye Tracking Data in Reading Tasks."
authors = [
    { name="Naser Al Madi", email="nsalmadi@colby.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "PyQt5",
    "scipy",
    "qt-material"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["fix8"]
package-dir = {"fix8" = "src"}

[tool.setuptools.package-data]
"fix8" = ["*.py", ".images/*", "*.xml"]

[project.scripts]
fix8 = "fix8.fix8:main"
